edit print functionality
